--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -34,8 +34,8 @@
                             {% endif %}
                         </div>
                         <div class="mb-3 form-check">
-                            {{ form.remember(class="form-check-input") }}
-                            {{ form.remember.label(class="form-check-label") }}
+                            {{ form.remember_me(class="form-check-input") }}
+                            {{ form.remember_me.label(class="form-check-label") }}
                         </div>
                         <button type="submit" class="btn btn-primary w-100">Войти</button>
                     </form>
