--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+
+
+{% block content %}
+
+<h1>Привет, {{ current_user.username }}!</h1>
+    {% if current_user.is_authenticated %}
+        <a href="{{ url_for('logout') }}">Выйти</a>
+    {% else %}
+        <a href="{{ url_for('login') }}">Войти</a>
+    {% endif %}
+<h1> страница о проекте </h1>
+
+{% endblock %}
