--- a/app/templates/handel_4xx_error.html
+++ b/app/templates/handel_4xx_error.html
@@ -15,7 +15,7 @@
     <div class="error">
         <h1> {{ error_description }} </h1>
         <h1> {{ error_name }} {{ error_code }} </h1>
-        <a href="{{ url_for('index') }}">На главную</a>
+        <a href="{{ url_for('main.index') }}">На главную</a>
     </div>
 </body>
 </html>
