--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -5,9 +5,9 @@
 
 <h1>Привет, {{ current_user.username }}!</h1>
     {% if current_user.is_authenticated %}
-        <a href="{{ url_for('logout') }}">Выйти</a>
+        <a href="{{ url_for('auth.logout') }}">Выйти</a>
     {% else %}
-        <a href="{{ url_for('login') }}">Войти</a>
+        <a href="{{ url_for('auth.login') }}">Войти</a>
     {% endif %}
 <h1> страница о проекте </h1>
 
