--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,37 +7,43 @@
     <title>Мой Flask-сайт</title>
     <!-- Bootstrap 5 (опционально) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/base.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/base.css') }}?v={{config['VERSION']}}" rel="stylesheet">
     {% block link %} {% endblock link %}
+    {% block script %} {% endblock script %}
     {% block style %} <style></style> {% endblock style %}
 </head>
 <body>
     <!-- Навигационная панель -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('index') }}">FlaskApp</a>
+            <a class="navbar-brand" href="{{ url_for('main.index') }}">FlaskApp</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="{{ url_for('index') }}">Главная</a>
+                        <a class="nav-link active" href="{{ url_for('main.index') }}">Главная</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('about') }}">О нас</a>
+                        <a class="nav-link" href="{{ url_for('main.about') }}">О нас</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('contact') }}">Контакты</a>
+                        <a class="nav-link" href="{{ url_for('main.contact') }}">Контакты</a>
                     </li>
+                    {% if current_user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('chat.chat')}}"> чат </a>
+                    </li>
+                    {% endif %}
                 </ul>
                 <div class="d-flex">
                     {% if current_user.is_authenticated %}
-                        <a href="{{ url_for('logout') }}" class="btn btn-outline-light me-2">Выйти</a>
-                        <a href="{{ url_for('profile', username=current_user.username) }}" class="btn btn-outline-light me-2">Профиль</a>
+                        <a href="{{ url_for('auth.logout') }}" class="btn btn-outline-light me-2">Выйти</a>
+                        <a href="{{ url_for('main.profile', username=current_user.username) }}" class="btn btn-outline-light me-2">Профиль</a>
                     {% else %}
-                        <a href="{{ url_for('login') }}" class="btn btn-outline-light me-2">Войти</a>
-                        <a href="{{ url_for('register') }}" class="btn btn-primary">Регистрация</a>
+                        <a href="{{ url_for('auth.login') }}" class="btn btn-outline-light me-2">Войти</a>
+                        <a href="{{ url_for('auth.register') }}" class="btn btn-primary">Регистрация</a>
                     {% endif %}
                 </div>
             </div>
