--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 
 {% block link %}
-<link href="{{ url_for('static', filename='css/weather_location.css') }}" rel="stylesheet">
+<link href="{{ url_for('static', filename='css/weather_location.css') }}?v={{config['VERSION']}}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
 
 <h1>Привет, {{ current_user.username }}!</h1>
     {% if current_user.is_authenticated %}
-        <a href="{{ url_for('logout') }}">Выйти</a>
+        <a href="{{ url_for('auth.logout') }}">Выйти</a>
     {% else %}
-        <a href="{{ url_for('login') }}">Войти</a>
+        <a href="{{ url_for('auth.login') }}">Войти</a>
     {% endif %}
 <h1 style="text-align: center; font-size: 60px"> главная страница </h1>
 
