--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,7 +23,7 @@
          alt="{{ weather.conditions }}">
             {% if weather.icon == 'sun' %}
                 ☀️
-            {% elif weather.icon == 'cloud' %}
+            {% elif weather.icon == '04n' %}
                 ☁️
             {% elif weather.icon == '04d' %}
                 🌧️
