--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,8 +1,8 @@
 
 {% extends 'base.html' %}
 
-{% block link %} <link href="{{ url_for('static', filename='css/profile.css')}}?v={{config['VERSION']}}"
-                       rel="stylesheet">
+{% block link %}
+    <link href="{{ url_for('static', filename='css/profile.css')}}?v={{config['VERSION']}}" rel="stylesheet">
 {% endblock link %}
 
 {% block style %}{% endblock %}
